squash and sign
Signed-off-by: Tilo Wiklund <tilo.wiklund@sensmetry.com>